Simplified classes, and made JSON handling more robust. Might need to make more robust.